--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <head>
     <title>Fetch all Data from PostgreSQL DB</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
     <center>
         <h1>We are successfuly fetch data from existing DB</h1>
+        <form class="card card-sm" method="get">
+                    <div class="card-body row no-gutters align-items-center" style="background-color: #252525;">
+                        <div class="col">
+                            <input type="search" name="item_name" placeholder="type for search" class="form-control form-control-borderless "
+                            style="background-color: #111;">
+                        </div>
+                        <div class="col-auto">
+                            <button class="btn btn-success btn-search" type="submit">search</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         <hr>
         <table border="1">
             <tr>
@@ -26,4 +40,7 @@
             {% endfor %}
         </table>
     </center>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
