--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <head>
     <title>Fetch all Data from PostgreSQL DB</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
     <center>
         <h1>We are successfuly fetch data from existing DB</h1>
+        <div class="col-md-12">
+                <form class="card card-sm"  method="get">
+                    <div class="card-body row no-gutters align-items-center" >
+                        <div class="col">
+                            <input type="search" name="item_name" placeholder="Domain name" class="form-control form-control-borderless "
+                            ><br/>
+                             <input type="search" name="month" placeholder="Month" class="form-control form-control-borderless "
+                            >
+                        </div>
+                        </div>
+                        <div class="col-auto">
+                            <button class="btn btn-success btn-search" type="submit">search</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            
+
         <hr>
         <table border="1">
             <tr>
@@ -15,9 +34,11 @@
                 <th>Duration</th>
             </tr>
             {% for result in data %}
+                 
                 <tr>
                     <td>{{result.user_id}}</td>
                     <td>{{result.d_name}}</td>
+
                     <td>{{result.direction}}</td>
                     <td>{{result.created_on}}</td>
                     <td>{{result.duration}}</td>
@@ -26,4 +47,7 @@
             {% endfor %}
         </table>
     </center>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
