--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,20 @@
     <title>Fetch all Data from PostgreSQL DB</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+          <script>
+              $(document).ready(function() {
+                  var duration;
+                  var totalduration=0;
+                  $('td:nth-child(5)').each(function()
+                  {
+                      duration=$(this).html();
+                      totalduration+=parseInt(duration);
+                      $('#totduration').text(totalduration/60);
+                  })
+              })
+          </script>
 </head>
 <body>
     <center>
@@ -24,7 +38,17 @@
             
 
         <hr>
-        <table border="1">
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown button
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                {% for c in data %}
+              <a class="dropdown-item" href="#">{{ c.d_name }}</a>
+              {% endfor %}
+            </div>
+          </div>
+        <table border="1" width="80%">
             <tr>
                 <th>ID</th>
                 <th>Domain Name</th>
@@ -44,9 +68,14 @@
                 </tr>
                 
             {% endfor %}
+            <tr>
+                <td colspan="4">TOTAL:</td>
+                <td id="totduration" style="font-weight: bold;"></td>
+            </tr>
         </table>
+        
     </center>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" 
+   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" 
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
