--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                   {
                       duration=$(this).html();
                       totalduration+=parseInt(duration);
-                      $('#totduration').text(totalduration/60+" min");
+                      $('#totduration').text(totalduration/60" min");
                   })
               })
           </script>
