--- a/templates/index.html
+++ b/templates/index.html
@@ -3,20 +3,7 @@
     <title>Fetch all Data from PostgreSQL DB</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-          <script>
-              $(document).ready(function() {
-                  var duration;
-                  var totalduration=0;
-                  $('td:nth-child(5)').each(function()
-                  {
-                      duration=$(this).html();
-                      totalduration+=parseInt(duration);
-                      $('#totduration').text(totalduration/60+" min");
-                  })
-              })
-          </script>
+         
 </head>
 <body>
     <center>
@@ -70,7 +57,22 @@
                 <td id="totduration" ></td>
             </tr>
         </table>
+        <button class="btn btn-success mt-2">DOWNLOAD CSV</button>
     </center>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            var duration;
+            var totalduration=0;
+            $('td:nth-child(5)').each(function()
+            {
+                duration=$(this).html();
+                totalduration+=parseInt(duration);
+                $('#totduration').text(totalduration/60+" min");
+            })
+        })
+    </script>
    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" 
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
