--- a/templates/index.html
+++ b/templates/index.html
@@ -54,25 +54,27 @@
             {% endfor %}
             <tr style="font-weight: bold;">
                 <td colspan="4" style="text-align: end;">TOTAL:</td>
-                <td id="totduration" ></td>
+                <td>{{ total }} min</td>
+                <!-- <td id="totduration" ></td> -->
             </tr>
         </table>
-        <button class="btn btn-success mt-2">DOWNLOAD CSV</button>
+        
+        <button onclick="location.href='{% url 'script' %}'" class="btn btn-success mt-2">DOWNLOAD CSV</button></a>
     </center>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <script>
-        $(document).ready(function() {
-            var duration;
-            var totalduration=0;
-            $('td:nth-child(5)').each(function()
-            {
-                duration=$(this).html();
-                totalduration+=parseInt(duration);
-                $('#totduration').text(totalduration/60+" min");
-            })
+<script>
+    $(document).ready(function() {
+        var duration;
+        var totalduration=0;
+        $('td:nth-child(5)').each(function()
+        {
+            duration=$(this).html();
+            totalduration+=parseInt(duration);
+            $('#totduration').text(totalduration/60+" min");
         })
-    </script>
+    })
+</script> -->
    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" 
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
