--- a/templates/index.html
+++ b/templates/index.html
@@ -1,57 +1,5 @@
-<!DOCTYPE html>
-<head>
-    <title>Fetch all Data from PostgreSQL DB</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-         
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-          <script>
-              $(document).ready(function() {
-                  var duration;
-                  var totalduration=0;
-                  $('td:nth-child(5)').each(function()
-                  {
-                      duration=$(this).html();
-                      totalduration+=parseInt(duration);
-                      $('#totduration').text(totalduration/60" min");
-                  })
-              })
-          </script>
-</head>
-<body>
-    <center>
-        <h1>build_absolute_uri: {{ request.build_absolute_uri }}</h1>
-        <h1>get_absolute_url: {{ request.get_absolute_url }}</h1>
-        
-        <h1>get_full_path: {{ request.get_full_path }}</h1><h1>We are successfuly fetch data from existing DB</h1>
-        <div class="col-md-4">
-                <form class="card card-sm"  method="get">
-                    <div class="card-body row no-gutters" >
-                        <div class="col">
-                            <label>Choose a domain from this list:
-                                <input list="browsers" name="item_name" required></label>
-                                <datalist id="browsers" name="item_name">
-                                    {% for domain in dom_names %}
-                                  <option value="{{ domain }}">{{ domain }}</option>
-                                    {% endfor %}
-                                </datalist> 
-                            <!--input type="search" name="item_name" placeholder="Domain name" class="form-control form-control-borderless"-->
-                            <br/>
-                            <input type="search" name="month" placeholder="Month" class="form-control form-control-borderless" required>
-                        </div>
-                        </div>
-                        <div class="col-auto">
-                            <button class="btn btn-success btn-search" type="submit">search</button>
-                        </div>
-                        <!-- <div class="col-auto">
-                            <button class="btn btn-success btn-search" type="submit">SHOW ALL DOMAINS</button>
-                        </div> -->
-                    </div>
-                </form>
-            </div>
-        <hr>
-        
+{% extends 'main.html' %}
+{% block content %}        
         <table border="1" width="80%">
             <tr>
                 <th>ID</th>
@@ -71,32 +19,12 @@
             {% endfor %}
             <tr style="font-weight: bold;">
                 <td colspan="4" style="text-align: end;">TOTAL:</td>
-                <td>{{ total }} min</td>
+                <td>{{ total|floatformat:2 }} min</td>
                 <!-- <td id="totduration" ></td> -->
             </tr>
         </table>
         <a href="{% url 'generate-csv' %}" class="btn btn-success mt-2">DOWNLOAD CSV
         </a>
    <p>{{ get_absolute_url }}</p>
-    </center>
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-<script>
-    $(document).ready(function() {
-        var duration;
-        var totalduration=0;
-        $('td:nth-child(5)').each(function()
-        {
-            duration=$(this).html();
-            totalduration+=parseInt(duration);
-            $('#totduration').text(totalduration/60+" min");
-        })
-    })
-</script> -->
-   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" 
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" 
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
+ 
+{% endblock %}
